<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.ddmsoftware.sorocabaguide.ScrollingAttractionsActivity"
    tools:showIn="@layout/activity_scrolling_attractions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_viewPaco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPacoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_weight="0.333"
                    android:text="\nPalácio dos Tropeiros\n(Paço Municipal)"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgPaco"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:layout_margin="5dp"
                    android:elevation="1dp"
                    android:src="@drawable/paco_municipal" />

                <TextView
                    android:id="@+id/tvPacoDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.333"
                    android:text="@string/paco_text" />

                <com.google.android.gms.ads.AdView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_TESTE"
                    android:id="@+id/adViewPaco"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:background="@android:color/holo_blue_light"
                        android:text="Como Chegar" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:background="@android:color/holo_blue_light"
                        android:text="Compartilhar" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_viewJardimBotanico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvJardimBotanicoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_weight="0.333"
                    android:text="\nJardim Botânico\nIrmãos Villas Boas"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgJardimBotanico"
                    android:layout_width="wrap_content"
                    android:layout_height="169dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/jardim_botanico" />

                <TextView
                    android:id="@+id/tvJardimBotanicoDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.333"
                    android:text="@string/jardim_botanico_text" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_viewBiblioteca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBibliotecaTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_weight="0.333"
                    android:text="\nBiblioteca Municipal de Sorocaba\nJorge Guilherme Senger"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgBiblioteca"
                    android:layout_width="wrap_content"
                    android:layout_height="220dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.666"
                    android:src="@drawable/biblioteca_municipal" />

                <TextView
                    android:id="@+id/tvBibliotecaDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.333"
                    android:text="@string/biblioteca_text" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_viewZoologico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvZoologicoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_weight="0.333"
                    android:text="\nZoológico Municipal\nQuinzinho de Barros"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgZoologico"
                    android:layout_width="wrap_content"
                    android:layout_height="220dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.666"
                    android:src="@drawable/zoologico_sorocaba" />

                <TextView
                    android:id="@+id/tvZoologicoDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.333"
                    android:text="@string/zoologico_text" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
